--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+* {
+  margin: 0;
+}
+
 body {
+  --to4-color: #003566;
+  overflow: hidden;
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
