--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;400;600;700&display=swap');
 .app {
     background-image: url('https://i.imgur.com/2K0XoCE.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     filter: contrast(140%);
+    font-family: 'Poppins', sans-serif;
     
 }
